--- a/saisies/upload.html
+++ b/saisies/upload.html
@@ -1,13 +1,24 @@
 <input type="hidden" name="joindre_upload" value="oui" />
 <input type="file" id="#ENV{nom}" name="#ENV{nom}[]" multiple
        data-url="#ENV{action}" >
+<div id="progressbar"></div>
 
 <script type="text/javascript">
 $(function () {
+
+    var progressbar = $('#progressbar').progressbar({
+        'value': false
+    });
+
     $('\#fileupload').fileupload({
         done: function (e, data) {
             $(e.target).submit();
+        },
+        progressall: function (e, data) {
+            var progress = parseInt(data.loaded / data.total * 100, 10);
+            progressbar.progressbar('value', progress);
         }
     });
+
 });
 </script>
