debug - après upload, il faut recharger la div.formulaire_spip en entier, et pas seulement la balise form.

--- a/saisies/upload.html
+++ b/saisies/upload.html
@@ -23,6 +23,7 @@ $(function () {
             },
             done: function (e, data) {
                 upload_form
+                    .parents('.formulaire_jfu')
                     .html(data.result)
                     .endLoading();
                 charger_form_upload();
