--- a/formulaires/inc-upload_document.html
+++ b/formulaires/inc-upload_document.html
@@ -11,12 +11,11 @@
 (#REM) Formulaire d'upload de fichier
 ]<div class='joindre_mode#GET{domid}[(#GET{methode}|=={upload}|non)none-js]' id='joindre_upload#GET{domid}'>
 	<ul>
-		<li class='editer editer_fichier_upload[ (#ENV**{erreurs}|table_valeur{fichier_upload}|oui)erreur]'>
-			<label for='fichier_upload#GET{domid}'><:bouton_upload:></label>[
-			<span class='erreur_message'>(#ENV**{erreurs}|table_valeur{fichier_upload})</span>
-			]<input class='file multi' type="file" name="fichier_upload[]" value='#ENV{fichier_upload}' id="fichier_upload#GET{domid}" size='11' />
-			<!--editer_fichier_upload-->
-		</li>
+
+    [(#SAISIE{upload, fichier_upload, label=<:bouton_upload:>,
+      id=fichier_upload#GET{domid}, js=javascript/upload_prive.js,
+      class=file multi})]
+
 	</ul>
 	<div class='sourceup'>
 		<:medias:bouton_download_depuis:>
