pour finir on n'utilise plus le multifile de SPIP, on gérera tout nous-même

--- a/formulaires/inc-upload_document.html
+++ b/formulaires/inc-upload_document.html
@@ -13,8 +13,7 @@
 	<ul>
 
     [(#SAISIE{upload, fichier_upload, label=<:bouton_upload:>,
-      id=fichier_upload#GET{domid}, js=javascript/upload_prive.js,
-      class=file multi})]
+      id=fichier_upload#GET{domid}, js=javascript/upload_prive.js})]
 
 	</ul>
 	<div class='sourceup'>
